Add comprehensive documentation and build tooling
This commit adds professional documentation and automated build
tooling to create distributable packages of the application.

Documentation:
- Enhanced README.md with comprehensive guide
  * Professional badges and table of contents
  * Detailed feature documentation
  * Installation options (Maven, pre-built JAR, manual)
  * Complete usage guide for both tabs
  * Technical architecture diagrams
  * Database schema documentation
  * Security features overview
  * Troubleshooting section
  * Contributing guidelines
  * Professional formatting with emojis and sections

- Added RELEASE_NOTES.md
  * Version 1.0.0 release information
  * Complete feature list with checkmarks
  * Technical implementation details
  * Code statistics and metrics
  * Security features documentation
  * Known issues and limitations
  * Roadmap for future versions
  * Support and contact information

Build Tooling:
- Created build-release.sh script
  * Automated release package creation
  * Maven and manual build support
  * Automatic dependency download
  * JAR file packaging
  * Cross-platform run scripts (run.sh, run.bat)
  * Installation guides (INSTALL.txt, QUICKSTART.txt)
  * Version and package documentation
  * ZIP archive creation with checksums
  * Professional build output with colors
  * Comprehensive error handling

Updated .gitignore:
- Added build artifact exclusions (target/, build/, dist/, lib/)
- Added IDE exclusions (.vscode/, *.iml)
- Better organization with comments

Benefits:
✓ Users can easily download and run the application
✓ Professional documentation for all skill levels
✓ Automated build process for releases
✓ Complete usage guides and troubleshooting
✓ Ready for GitHub releases
✓ Cross-platform support documented
✓ Security and architecture clearly explained

The project now has production-ready documentation and
distribution tooling suitable for public release.